# cliendly-solutions-propelix

./: db.sqlite3  main.py  pyproject.toml
config/: settings.py
core/: admin.py
inventory/: admin.py  models.py
inventory/migrations/: 0001_initial.py
product/: admin.py  models.py
product/migrations/: 0001_initial.py  0002_alter_product_unit_type.py  0003_product_stock_quantity.py
stock/: admin.py  models.py
stock/migrations/: 0001_initial.py  0002_remove_stockmovement_created_by_and_more.py  0003_remove_stokhareketkalemi_birim_maliyet.py
